- Fixed comment moderation button alignment issues - Fixed comment status alignment and margin issues - Bumped version

--- a/style.less
+++ b/style.less
@@ -21,7 +21,7 @@ body {
 	.evo_container__header, .evo_container__page_top {
 		margin-top: 80px;
 	}
-	
+
 	// Fix for search form in disps above...
 	div.compact_search_form {
 		div.input-group {
@@ -46,6 +46,33 @@ body {
 	font-family: "Palatino Linotype", "Book Antiqua", Palatino, serif;
 }
 
+// Comment
+.evo_comment_footer, .evo_comment_info {
+	.action_btn_group {
+		float: right;
+	}
+}
+
+.evo_comment {
+	.panel-heading {
+		line-height: 1.2em;
+		.evo_status {
+			margin-left: 5px;
+
+			@media screen and ( max-width: 640px ) {
+				float: none !important;
+				margin-left: 0;
+				margin-top: 5px;
+				display: inline-block;
+				&:before {
+					display: block;
+					content: " ";
+				}
+			}
+		}
+	}
+}
+
 .evo_container__front_page_primary,
 .evo_container__front_page_secondary,
 .evo_container__standalone_page_area_6, .evo_container__single_page_cover,
@@ -63,13 +90,13 @@ body {
 		font-size: 50px;
 		margin-bottom: 30px;
 	}
-	
+
 	.evo_widget .item_excerpt > a.btn.btn-default,
 	.evo_widget .item_content > a.btn.btn-default {
 		padding: 0 8px;
 		border: none;
 	}
-	
+
 	.widget_core_coll_featured_intro .featurepost {
 		.evo_post_title {
 			h2,
@@ -82,7 +109,7 @@ body {
 			}
 		}
 	}
-	
+
 	.evo_post__full_text {
 		ul {
 			margin-left: 25px;
@@ -108,7 +135,7 @@ body {
 	margin: 0;
 	z-index: 999; // Important for placing the menu container OVER the background image
 	transition: 0.2s ease-in;
-	
+
 	.navbar-header {
 		// display: inline-block;
 		// width: 100%;
@@ -116,21 +143,21 @@ body {
 		text-overflow: ellipsis;
 		white-space: nowrap;
 	}
-	
+
 	.navbar-brand {
 		padding: 0;
-		
+
 		width: 100%;
 		overflow: hidden;
 		text-overflow: ellipsis;
 		white-space: nowrap;
-		
+
 		> h3 {
 			vertical-align: middle;
 			// position: relative; --- Causing issue on Safari
 			display: block;
 			// float: left;
-		
+
 			margin: 0;
 			a {
 				font-family: 'Josefin Sans', sans-serif;
@@ -139,12 +166,12 @@ body {
 				letter-spacing: .15em;
 				line-height: 20px;
 				text-transform: uppercase;
-				
+
 				padding-top: 17px;
 				padding-bottom: 17px;
 				position: relative;
 				display: block;
-				
+
 				overflow: hidden;
 				text-overflow: ellipsis;
 				white-space: nowrap;
@@ -240,7 +267,7 @@ div.front_main_area {
 	div.widget {
 		margin: 30px 0;
 	}
-	
+
 	// Collection title widget style
 	.evo_container__front_page_primary .widget_core_coll_title h1 {
 		margin: 0;
@@ -249,7 +276,7 @@ div.front_main_area {
 			line-height: 1.2em;
 			text-transform: uppercase;
 			letter-spacing: .02em;
-			font-weight: 100;	
+			font-weight: 100;
 		}
 	}
 }
@@ -608,7 +635,7 @@ div.action_messages, div.log_container {
 		display: table-cell;
 		padding: 20px 0 10px 30px;
 		vertical-align: middle;
-		
+
 		> a {
 			color: #333 !important;
 		}
@@ -682,7 +709,7 @@ body.pictured .secondary_area .widget_core_org_members {
 		text-align: center;
 		opacity: 0.5;
 		transition: 0.1s all;
-		position:relative; 
+		position:relative;
 		left:-50%;
 		&:hover {
 			cursor: pointer;
@@ -693,23 +720,23 @@ body.pictured .secondary_area .widget_core_org_members {
 
 .evo_widget {
 	padding: 20px 0;
-	
+
 	> h2, h3 {
 		margin-top: 0;
 	}
-	
+
 	h2.page-header {
 		border: none;
 		margin-top: 0;
 		padding: 0 0 17px;
 		font-size: 38px;
 	}
-	
+
 	h1, h2, h3, h4, h5, h6 {
 		font-family: 'Josefin Sans', sans-serif;
 		font-weight: 300;
 	}
-	
+
 	p, ul {
 		margin-bottom: 0;
 		padding: 0 0 18px;
@@ -718,7 +745,7 @@ body.pictured .secondary_area .widget_core_org_members {
 			margin-bottom: 0;
 		}
 	}
-	
+
 	div {
 		margin-top: 0;
 		margin-bottom: 0;
@@ -730,16 +757,16 @@ body.pictured .secondary_area .widget_core_org_members {
 				margin: 0;
 			}
 		}
-		
+
 		&.widget_rwd_blocks > div {
 			padding: 0 15px 0;
 		}
 	}
-	
+
 	div.widget_flow_blocks div {
 		margin: 3px;
 	}
-	
+
 	ul {
 		display: inline-block; // important for keeping list circles next to the li elements if not align-left
 	}
@@ -757,7 +784,7 @@ body.pictured .secondary_area .widget_core_org_members {
 			opacity: 0.8;
 		}
 	}
-	
+
 	&.widget_core_coll_featured_posts.evo_layout_rwd.evo_withexcerpt,
 	&.widget_core_coll_featured_posts.evo_layout_rwd.evo_withteaser,
 	&.widget_core_coll_item_list.evo_layout_rwd.evo_withexcerpt,
@@ -772,7 +799,7 @@ body.pictured .secondary_area .widget_core_org_members {
 			font-size: 24px;
 		}
 	}
-	
+
 	&.widget_core_coll_featured_posts.evo_layout_rwd,
 	&.widget_core_coll_item_list.evo_layout_rwd,
 	&.widget_core_coll_page_list.evo_layout_rwd,
@@ -824,7 +851,7 @@ div[class*="_list"],
 	}
 	p {
 		margin: 0;
-		&.baseline {		
+		&.baseline {
 			padding: 20px 0;
 		}
 	}
@@ -860,11 +887,11 @@ div[class*="_list"],
 	// }
 }
 
-@media only screen and (max-width: 992px) {	
+@media only screen and (max-width: 992px) {
 	div.front_main_area .evo_container__front_page_primary .widget_core_coll_title h1 a {
 		font-size: 50px;
 	}
-	
+
 	.detail_msgform .main_page_wrapper,
 	.disp_help .main_page_wrapper,
 	.main_page_wrapper_other_disps {
@@ -877,15 +904,15 @@ div[class*="_list"],
 	#skin_wrapper {
 		font-size: 15px; // Default font-size
 	}
-	
+
 	div.front_main_area .evo_container__front_page_primary .widget_core_coll_title h1 a {
 		font-size: 34px;
 	}
-	
+
 	.evo_widget h2.page-header {
 		font-size: 34px;
 	}
-	
+
 	.evo_container__front_page_primary,
 	.evo_container__front_page_secondary,
 	.evo_container__standalone_page_area_6, .evo_container__single_page_cover,
@@ -899,7 +926,7 @@ div[class*="_list"],
 	h5 { font-size: 14px }
 	h6 { font-size: 10px }
 	}
-	
+
 	.detail_msgform .main_page_wrapper,
 	.disp_help .main_page_wrapper,
 	.main_page_wrapper_other_disps {
@@ -940,7 +967,7 @@ div[class*="_list"],
 
 	.long-and-truncated {
 		flex: 1;
-	  
+
 		white-space: nowrap;
 		overflow: hidden;
 		text-overflow: ellipsis;
